--- a/views/markers/new.ejs
+++ b/views/markers/new.ejs
@@ -1,18 +1,18 @@
 <% layout('layouts/boilerplate')%>
 <div class="row">
-    <h1 class="text-center">New Campground</h1>
+    <h1 class="text-center">New Marker</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+        <form action="/markers" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
-                <input class="form-control" type="text" id="title" name="campground[title]" required>
+                <input class="form-control" type="text" id="title" name="marker[title]" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div>
             <div class="mb-3">
                 <label class="form-label" for="location">Location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]" required>
+                <input class="form-control" type="text" id="location" name="marker[location]" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
@@ -20,17 +20,17 @@
             <!-- <input type="file" name = "image" id="" multiple> -->
             <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image Url</label>
-                <input class="form-control" type="text" id="image" name="campground[image]" required>
+                <input class="form-control" type="text" id="image" name="marker[image]" required>
                 <div class="valid-feedback">
                     Looks good!
                 </div>
             </div> -->
             <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
+                <label class="form-label" for="price">marker Price</label>
                 <div class="input-group">
                     <span class="input-group-text" id="price-label">$</span>
                     <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price"
-                        aria-describedby="price-label" name="campground[price]" required>
+                        aria-describedby="price-label" name="marker[price]" required>
                 </div>
                 <div class="valid-feedback">
                     Looks good!
@@ -39,7 +39,7 @@
 
             <div class="mb-3">
                 <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]"
+                <textarea class="form-control" type="text" id="description" name="marker[description]"
                     required></textarea>
                 <div class="valid-feedback">
                     Looks good!
@@ -56,9 +56,9 @@
                 </div>
             </div>
             <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
+                <button class="btn btn-success">Add Marker</button>
             </div>
         </form>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/markers">All Markers</a>
     </div>
 </div>
