--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,6 @@
 <!-- mt-auto: move to bottome -->
 <footer class="footer bg-dark py-3 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy; YelpCamp 2024</span>
+        <span class="text-muted">&copy; ExploreHub 2024</span>
     </div>
 </footer>
